--- a/apps/attica-dt/project.json
+++ b/apps/attica-dt/project.json
@@ -18,7 +18,10 @@
           "apps/attica-dt/src/favicon.ico",
           "apps/attica-dt/src/assets"
         ],
-        "styles": ["apps/attica-dt/src/styles.css"],
+        "styles": [
+          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/attica-dt/src/styles.css"
+        ],
         "scripts": []
       },
       "configurations": {
