--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cdk": "^14.2.5",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "~14.2.0",
+    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/language-service": "~14.2.0",
     "@angular/material": "^14.2.5",
     "@nrwl/cli": "15.0.0",
