--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~14.2.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
+    "mapbox-gl": "^2.10.0",
+    "ngx-mapbox-gl": "^9.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -44,6 +46,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
     "@types/jest": "28.1.1",
+    "@types/mapbox-gl": "^2.7.6",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
