vanilla nestjs backend

--- a/apps/attica-dt/project.json
+++ b/apps/attica-dt/project.json
@@ -67,7 +67,10 @@
           "browserTarget": "attica-dt:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/attica-dt/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
