--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
     "mapbox-gl": "^2.10.0",
     "ngx-mapbox-gl": "^9.1.0",
-    "rxjs": "~7.5.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -38,11 +42,15 @@
     "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/language-service": "~14.2.0",
     "@angular/material": "^14.2.5",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.0",
     "@nrwl/cypress": "15.0.0",
     "@nrwl/eslint-plugin-nx": "15.0.0",
     "@nrwl/jest": "15.0.0",
     "@nrwl/linter": "15.0.0",
+    "@nrwl/nest": "15.0.0",
+    "@nrwl/node": "15.0.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
     "@types/jest": "28.1.1",
