mongoose config from .env

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
     "mapbox-gl": "^2.10.0",
+    "mongoose": "^6.6.5",
     "ngx-mapbox-gl": "^9.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
