--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
+    "@types/geojson": "^7946.0.10",
+    "geojson": "^0.5.0",
     "mapbox-gl": "^2.10.0",
     "mongoose": "^6.6.5",
+    "mongoose-geojson-schema": "^2.2.3",
     "ngx-mapbox-gl": "^9.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -58,6 +61,7 @@
     "@nrwl/workspace": "15.0.0",
     "@types/jest": "28.1.1",
     "@types/mapbox-gl": "^2.7.6",
+    "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
