--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf dist",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
-    "build": "nx build",
+    "build": "npm run clean && nx build && nx build attica-dt-api && scp -r dist/apps/* atticadt:atticadt/webapp && scp .env atticadt:atticadt && scp package.json atticadt:atticadt",
     "test": "nx test"
   },
   "private": true,
@@ -24,9 +25,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
-    "@types/geojson": "^7946.0.10",
     "geojson": "^0.5.0",
     "mapbox-gl": "^2.10.0",
     "mongoose": "^6.6.5",
@@ -59,6 +60,7 @@
     "@nrwl/node": "15.0.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
+    "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
     "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
