--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@uwmh/mapbox": ["libs/mapbox/src/index.ts"],
       "@uwmh/material": ["libs/material/src/index.ts"],
+      "@uwmh/state": ["libs/state/src/index.ts"],
       "@uwmh/ui": ["libs/ui/src/index.ts"]
     }
   },
