--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
     "geojson": "^0.5.0",
+    "lodash-es": "^4.17.21",
     "mapbox-gl": "^2.10.0",
     "mongoose": "^6.6.5",
     "mongoose-geojson-schema": "^2.2.3",
     "ngx-mapbox-gl": "^9.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -62,9 +64,11 @@
     "@nrwl/workspace": "15.0.0",
     "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.0",
