--- a/package.json
+++ b/package.json
@@ -26,6 +26,16 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
+    "@ngneat/effects": "^1.1.1",
+    "@ngneat/effects-ng": "^2.0.0",
+    "@ngneat/elf": "^2.1.0",
+    "@ngneat/elf-cli-ng": "^1.0.0",
+    "@ngneat/elf-devtools": "^1.2.1",
+    "@ngneat/elf-entities": "^4.4.2",
+    "@ngneat/elf-pagination": "^1.0.1",
+    "@ngneat/elf-persist-state": "^1.1.6",
+    "@ngneat/elf-requests": "^1.1.4",
+    "@ngneat/elf-state-history": "^1.3.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.0",
     "geojson": "^0.5.0",
