--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nrwl/cypress": "15.0.0",
     "@nrwl/eslint-plugin-nx": "15.0.0",
     "@nrwl/jest": "15.0.0",
+    "@nrwl/js": "15.0.0",
     "@nrwl/linter": "15.0.0",
     "@nrwl/nest": "15.0.0",
     "@nrwl/node": "15.0.0",
