toggle layers from map button

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@uwmh/data": ["libs/data/src/index.ts"],
-      "@uwmh/mapbox": ["libs/mapbox/src/index.ts"],
-      "@uwmh/material": ["libs/material/src/index.ts"],
-      "@uwmh/state": ["libs/state/src/index.ts"],
-      "@uwmh/ui": ["libs/ui/src/index.ts"]
+      "@uwmh/state": ["libs/state/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
