--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "ngx-mapbox-gl": "^9.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "three": "^0.146.0",
+    "threebox-plugin": "^2.2.7",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
@@ -79,6 +81,7 @@
     "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
+    "@types/three": "^0.144.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
