--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
-    "build": "npm run clean && nx build && nx build attica-dt-api && scp -r dist/apps/* atticadt:atticadt/webapp && scp .env atticadt:atticadt && scp package.json atticadt:atticadt",
+    "build": "npm run clean && nx build --prod && nx build attica-dt-api --prod && scp -r dist/apps/* atticadt:atticadt/webapp && scp .env atticadt:atticadt && scp package.json atticadt:atticadt",
+    "build:stats": "nx build --stats-json",
+    "analyze": "webpack-bundle-analyzer dist/apps/attica-dt/stats.json",
     "test": "nx test"
   },
   "private": true,
@@ -82,6 +84,7 @@
     "@types/node": "16.11.7",
     "@types/three": "^0.144.0",
     "@types/uuid": "^8.3.4",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.0",
@@ -102,6 +105,7 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "webpack-bundle-analyzer": "^4.7.0"
   }
 }
