--- a/apps/attica-dt/project.json
+++ b/apps/attica-dt/project.json
@@ -30,7 +30,7 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
+              "maximumWarning": "2.5mb",
               "maximumError": "3mb"
             },
             {
