--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -49,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "three": "^0.146.0",
+    "threebox-plugin": "^2.2.7",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
@@ -80,6 +82,7 @@
     "@types/jest": "28.1.1",
     "@types/lodash-es": "^4.17.6",
     "@types/mapbox-gl": "^2.7.6",
+    "@types/mapbox__mapbox-gl-draw": "^1.3.3",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
     "@types/three": "^0.144.0",
