--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@uwmh/data": ["libs/data/src/index.ts"]
-    }
+    },
+    "typeRoots": ["./typings"]
   },
   "exclude": ["node_modules", "tmp"]
 }
