--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "threebox-plugin": "^2.2.7",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -81,8 +82,8 @@
     "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/mapbox-gl": "^2.7.6",
     "@types/mapbox__mapbox-gl-draw": "^1.3.3",
+    "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
     "@types/three": "^0.144.0",
