--- a/apps/attica-dt/project.json
+++ b/apps/attica-dt/project.json
@@ -21,7 +21,7 @@
         ],
         "styles": [
           "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-          "apps/attica-dt/src/styles.css"
+          "apps/attica-dt/src/styles.scss"
         ],
         "scripts": []
       },
