--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@uwmh/data": ["libs/data/src/index.ts"]
+      "@uwmh/data": ["libs/data/src/index.ts"],
+      "@uwmh/material": ["libs/material/src/index.ts"],
+      "@uwmh/ui": ["libs/ui/src/index.ts"]
     },
     "typeRoots": ["./typings"]
   },
