--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@ngneat/elf-state-history": "^1.3.0",
     "@ngneat/until-destroy": "^9.2.2",
     "@nrwl/angular": "15.0.13",
+    "echarts": "^5.4.0",
     "geojson": "^0.5.0",
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^2.10.0",
     "mongoose": "^6.6.5",
     "mongoose-geojson-schema": "^2.2.3",
+    "ngx-echarts": "^15.0.1",
     "ngx-mapbox-gl": "^9.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
@@ -83,8 +85,8 @@
     "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/mapbox-gl": "^2.7.6",
     "@types/mapbox__mapbox-gl-draw": "^1.3.3",
+    "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
     "@types/three": "^0.144.0",
