--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clean": "rimraf dist",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
+    "config:attica-dt": "ts-node ./scripts/setenv.ts",
     "start": "nx serve",
     "build": "npm run clean && nx build --prod && nx build attica-dt-api --prod",
     "deploy": "rsync --delete -a -e ssh dist/apps/* atticadt@atticadt:webapp",
@@ -27,7 +28,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@ngneat/effects": "^1.1.1",
@@ -44,12 +47,18 @@
     "@nrwl/angular": "15.0.13",
     "echarts": "^5.4.0",
     "geojson": "^0.5.0",
+    "google-auth-library": "^8.7.0",
+    "google-one-tap": "^1.0.6",
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^2.10.0",
     "mongoose": "^6.6.5",
     "mongoose-geojson-schema": "^2.2.3",
     "ngx-echarts": "^15.0.1",
     "ngx-mapbox-gl": "^9.1.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "three": "^0.146.0",
@@ -83,12 +92,16 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.0",
     "@types/geojson": "^7946.0.10",
+    "@types/google-one-tap": "^1.2.2",
     "@types/jest": "28.1.1",
     "@types/lodash-es": "^4.17.6",
     "@types/mapbox__mapbox-gl-draw": "^1.3.3",
     "@types/mapbox-gl": "^2.7.6",
     "@types/mongoose-geojson-schema": "^2.1.6",
     "@types/node": "16.11.7",
+    "@types/passport-google-oauth2": "^0.1.5",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/three": "^0.144.0",
     "@types/uuid": "^8.3.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
