--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@auth0/angular-jwt": "^5.1.0",
     "@mapbox/mapbox-gl-draw": "^1.3.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
