--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@uwmh/data": ["libs/data/src/index.ts"],
       "@uwmh/material": ["libs/material/src/index.ts"],
+      "@uwmh/state": ["libs/state/src/index.ts"],
       "@uwmh/ui": ["libs/ui/src/index.ts"]
     },
     "typeRoots": ["./typings"]
