uiforms module, ΕΥΔΑΠ form

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@uwmh/mapbox": ["libs/mapbox/src/index.ts"],
       "@uwmh/material": ["libs/material/src/index.ts"],
       "@uwmh/state": ["libs/state/src/index.ts"],
-      "@uwmh/ui": ["libs/ui/src/index.ts"]
+      "@uwmh/ui": ["libs/ui/src/index.ts"],
+      "@uwmh/uiforms": ["libs/uiforms/src/index.ts"]
     },
     "typeRoots": ["./typings"]
   },
